--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -2,6 +2,7 @@
 {% extends 'main_app/common.html' %}
 {% block content %}
 <html lang="en">
+
 <body >  
 	<!-- Emergency button -->
 	<div style="text-align: center;justify-content: center;background-color: rgb(132, 132, 245);">
@@ -16,34 +17,88 @@
 			</div>
 		</div>
 	</div>
-	<!--Nearby Safe Location-->
+
 	<div class="container-fluid">
 		<div class="row">
+			<!--Nearby Safe Location-->
 			<div class="col-sm-6">
-					<div class="card" style="text-align: center;justify-content: center;box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;width: 100%;height: 300px;">
-						<div class="container" style="padding: 2px 16px;">
-							<h3>Safe Places Around you</h3>
-							<div>
-								<p>Police stations: <a href="http://www.google.com/maps/search/police+station/"><button  class="btn btn-primary" style=" margin-left:auto;margin-right:auto;display:block;">Get Nearest Police Station Location</button></a></p>
-								<p>Hospitals: <a href="http://www.google.com/maps/search/hospital/"><button class="btn btn-primary" style=" margin-left:auto;margin-right:auto;display:block;">Get Nearest Hospital</button></a></p>
-							</div>
+				<div class="card" style="text-align: center;justify-content: center;box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;width: 100%;height: 300px;">
+					<div class="container" style="padding: 2px 16px;">
+						<h3>Safe Places Around you</h3>
+						<div>
+							<p>Police stations: <a href="http://www.google.com/maps/search/police+station/"><button  class="btn btn-primary" style=" margin-left:auto;margin-right:auto;display:block;">Get Nearest Police Station Location</button></a></p>
+							<p>Hospitals: <a href="http://www.google.com/maps/search/hospital/"><button class="btn btn-primary" style=" margin-left:auto;margin-right:auto;display:block;">Get Nearest Hospital</button></a></p>
 						</div>
-					</div> 
-				</div>
-				<!--Play Siren for immediate help-->
-				<div class="col-sm-6">
-					<div class="card" style="text-align: center;justify-content: center;box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;width: 100%;height: 300px;">
-						<div class="container" style="padding: 2px 16px;">
-							<h3>Play sirens</h3>
-							<audio controls autoplay>
-								<source src="https://actions.google.com/sounds/v1/emergency/emergency_siren_close_long.ogg" type="audio/ogg" >
-								Audio not found
-							</audio>
-						</div>
-					</div> 
-				</div>
+					</div>
+				</div> 
+			</div>
+			<!--Play Siren for immediate help-->
+			<div class="col-sm-6">
+				<div class="card" style="text-align: center;justify-content: center;box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;width: 100%;height: 300px;">
+					<div class="container" style="padding: 2px 16px;">
+						<h3>Play sirens</h3>
+						<audio controls autoplay>
+							<source src="https://actions.google.com/sounds/v1/emergency/emergency_siren_close_long.ogg" type="audio/ogg" >
+							Audio not found
+						</audio>
+					</div>
+				</div> 
+			</div>
 		</div>
-
+	</div>
+	<!-- Video carousel -->
+	<div class="container carousel-container">
+		<h1 style="text-align: center;">Self defence techniques</h1>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+		
+			</ol>
+		  	<div class="carousel-inner" style="justify-content: center; background-color: black;">
+				<div class="carousel-item active">
+					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+						<source src="https://thumbs.gfycat.com/FluffyFlashyCockroach-mobile.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video> 
+				</div>
+				<div class="carousel-item">
+					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+						<source src="https://thumbs.gfycat.com/MetallicBoilingGermanshorthairedpointer-mobile.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video> 
+				</div>
+				<div class="carousel-item" >
+					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+						<source src="https://thumbs.gfycat.com/InnocentImpassionedBrocketdeer-mobile.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video> 
+				</div>
+				<div class="carousel-item" >
+					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+						<source src="https://thumbs.gfycat.com/FrenchFatGalapagosmockingbird-mobile.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video> 
+				</div>
+				<div class="carousel-item" >
+					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+						<source src="https://thumbs.gfycat.com/DecimalWeightyGrayreefshark-mobile.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video> 
+				</div>
+		  	</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true" ></span>
+					<span class="sr-only">Next</span>
+			</a>
+		</div>
 	</div>
 {% endblock %}
 </html>
