--- a/main_app/templates/main_app/common.html
+++ b/main_app/templates/main_app/common.html
@@ -30,33 +30,27 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="../../static/css/styles.css">
+
   <style>
     body {
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
-
-
-
     .my-bottom {
       position: absolute;
       bottom: 0
     }
-
     .dropdown-item:hover {
       background-color: #0f3057;
     }
-
     .User {
       font-size: 1.25rem;
 
     }
-
     .new {
       font-size: 1.2rem;
     }
-
     .new::after {
       position: relative;
       left: 4px;
@@ -72,12 +66,11 @@
       border-left: .3em solid transparent;
     }
     #toast-container {
-  top: auto !important;
-  right: auto !important;
-  bottom: 10%;
-  left:7%;
-}
-
+      top: auto !important;
+      right: auto !important;
+      bottom: 10%;
+      left:10%;
+    }
     .User::after {
       display: inline-block;
       width: 0;
@@ -90,13 +83,11 @@
       border-bottom: 0;
       border-left: .3em solid transparent;
     }
-
     @media only screen and(max-width: 600px) {
       .new {
         margin-top: 0px;
       }
     }
-
     .dropdown-toggle::after {
       display: none;
     }
@@ -106,14 +97,12 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top"
-      style="background-color:rgb(85, 87, 88); height:100px; padding:None;position:sticky !important ">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color:rgb(85, 87, 88); height:100px; padding:None;position:sticky !important ">
       <a href="/home" class="btn btn-info btn-lg" style="height:auto;padding:3px 15px;">
-       Home
+        Home
       </a>
-      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-        style="background-color:white">
+
+      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="background-color:white">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -124,12 +113,10 @@
               &nbsp;&nbsp; Emergency Contacts
             </a>
           </li>
-          
 
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false" style=" color: white; font-size: 18px;">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" color: white; font-size: 18px;">
                &nbsp;&nbsp; {{user.username}} <i class="fa fa-sort-down"></i>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2" style="background-color:darkblue;">
@@ -138,8 +125,7 @@
           </li>
           {% else %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false" style="color: white; font-size: 18px;">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white; font-size: 18px;">
               &nbsp;&nbsp; User <i class="fa fa-sort-down"></i>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown3" style="background-color:darkblue">
