--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% extends 'main_app/common.html' %}
+{% load static %}
 {% block content %}
 <html lang="en">
 
@@ -60,31 +61,31 @@
 			</ol>
 		  	<div class="carousel-inner" style="justify-content: center; background-color: black;">
 				<div class="carousel-item active">
-					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+					<video class="center " autoplay muted loop style="margin-left: 20% !important;width:60% !important;">
 						<source src="https://thumbs.gfycat.com/FluffyFlashyCockroach-mobile.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video> 
 				</div>
 				<div class="carousel-item">
-					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+					<video class="center " autoplay muted loop style="margin-left: 20% !important;width:60% !important;" >
 						<source src="https://thumbs.gfycat.com/MetallicBoilingGermanshorthairedpointer-mobile.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video> 
 				</div>
 				<div class="carousel-item" >
-					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+					<video class="center " autoplay muted loop style="margin-left: 20% !important;width:60% !important;">
 						<source src="https://thumbs.gfycat.com/InnocentImpassionedBrocketdeer-mobile.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video> 
 				</div>
 				<div class="carousel-item" >
-					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+					<video class="center " autoplay muted loop style="margin-left: 20% !important;width:60% !important;">
 						<source src="https://thumbs.gfycat.com/FrenchFatGalapagosmockingbird-mobile.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video> 
 				</div>
 				<div class="carousel-item" >
-					<video class="center" autoplay muted loop style="margin: 0 auto; width: 100%;">
+					<video class="center " autoplay muted loop style="margin-left: 20% !important;width:60% !important;">
 						<source src="https://thumbs.gfycat.com/DecimalWeightyGrayreefshark-mobile.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video> 
