--- a/main_app/templates/main_app/emergency.html
+++ b/main_app/templates/main_app/emergency.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<body style="height:1000px; max-width:100%; background-color:white;margin-top:60px;">
+<body style="height:1000px; max-width:100%; background-color:white;">
     <div class="jumbotron container" style="background-color: white;text-align: center;justify-content: center;">
 		<div>
 			<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
